# spindle-shell

./: .gitignore  Cargo.toml  LICENSE  README.md
spindle-lang/: Cargo.toml
spindle-lang/src/: analyzer.rs  environment.rs  evaluator.rs  external_resources.rs  function_composer.rs  function_resolver.rs  function_runner.rs  functions.rs  lib.rs  parser.rs  scanner.rs  tokens.rs  type_checker.rs  type_reader.rs  types.rs  values.rs
spindle-metalang/: Cargo.toml
spindle-metalang/src/: lib.rs
spindle-preprocessor/: Cargo.toml
spindle-preprocessor/src/: lib.rs
spindle-shell-lib/: Cargo.toml
spindle-shell-lib/src/: lib.rs  values_display.rs
src/: analyzer.rs  environment.rs  evaluator.rs  external_resources.rs  file_functions.rs  function_resolver.rs  functions.rs  http_functions.rs  main.rs  parser.rs  scanner.rs  shell.rs  tokens.rs  types.rs  value_store.rs  values.rs  values_display.rs
