[package]
name = "spindle-shell"
version = "0.1.0"
edition = "2021"

[dependencies]


bigdecimal = "0.3.0"
chrono = "0.4"
crossterm = "0.24.0"
#kafka = "0.9.0" # requires openssl-devel install
mysql = "22.2.0"
num-bigint = "0.4.3"
redis = "0.21.5"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.143"
serde_json = "1.0.83"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.6"

