[package]
name = "spindle-shell"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "spindle-lang",
    "spindle-preprocessor",
    "spindle-shell-lib",
]

[dependencies]

chrono = "0.4"
crossterm = "0.24"
#kafka = "0.9.0" # requires openssl-devel install
mysql = "22.2.0"
redis = "0.21.5"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.143"
serde_json = "1.0.83"
spindle-lang = { path= "spindle-lang" }
spindle-preprocessor = { path = "spindle-preprocessor" }
spindle-shell-lib = {path = "spindle-shell-lib" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.6"
